--- a/web/index.html
+++ b/web/index.html
@@ -8,68 +8,136 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
+            flex-direction: column;
             padding: 20px;
+            margin: 0;
+            min-height: 100vh;
+            background-color: #f4f4f4;
         }
+
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            width: 90%;
+            max-width: 1200px;
+            margin-top: 30px;
+        }
+
         .form-container {
-            width: 50%;
+            width: 35%;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+
         .form-container h1 {
             font-size: 24px;
+            margin-bottom: 15px;
+            text-align: center;
         }
+
         .form-container label {
-            margin-bottom: 10px;
+            font-size: 16px;
+            margin-bottom: 8px;
             display: block;
         }
+
         .form-container input[type="text"] {
             width: 100%;
-            padding: 10px;
-            margin: 5px 0 15px 0;
+            padding: 12px;
+            font-size: 14px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
         }
+
         .form-container input[type="submit"] {
-            padding: 10px 20px;
+            padding: 12px 20px;
             font-size: 16px;
             cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            width: 100%;
         }
+
+        .form-container input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .result-container {
+            margin-top: 20px;
+            font-size: 16px;
+            color: #333;
+        }
+
+        .result-container h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        .result-container p {
+            margin: 5px 0;
+        }
+
         .image-container {
-            width: 45%;
+            width: 55%;
+            padding: 20px;
+            text-align: center;
         }
+
         .image-container img {
             width: 100%;
             height: auto;
-        }
-        .result-container {
-            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <h1>Enter Coordinates</h1>
-        <form method="POST">
-            <label for="x">X Coordinate:</label>
-            <input type="text" id="x" name="x" required><br>
-            <label for="y">Y Coordinate:</label>
-            <input type="text" id="y" name="y" required><br>
-            <label for="z">Z Coordinate:</label>
-            <input type="text" id="z" name="z" required><br>
-            <input type="submit" value="Submit">
-        </form>
+    <div class="container">
+        <!-- Form Section -->
+        <div class="form-container">
+            <h1>Enter Coordinates</h1>
+            <form method="POST">
+                <label for="x">X Coordinate:</label>
+                <input type="text" id="x" name="x" required><br>
+                <label for="y">Y Coordinate:</label>
+                <input type="text" id="y" name="y" required><br>
+                <label for="z">Z Coordinate:</label>
+                <input type="text" id="z" name="z" required><br>
+                <label for="yaw">Yaw:</label>
+                <input type="text" id="yaw" name="yaw" required><br>
+                <label for="pitch">Pitch:</label>
+                <input type="text" id="pitch" name="pitch" required><br>
+                <label for="roll">Roll:</label>
+                <input type="text" id="roll" name="roll" required><br>
+                <input type="submit" value="Submit">
+            </form>
 
-        {% if x and y and z %}
-        <div class="result-container">
-            <h3>Coordinates Submitted!</h3>
-            <p><strong>X:</strong> {{ x }}</p>
-            <p><strong>Y:</strong> {{ y }}</p>
-            <p><strong>Z:</strong> {{ z }}</p>
+            {% if x and y and z %}
+            <div class="result-container">
+                <h3>Coordinates Submitted!</h3>
+                <p><strong>X:</strong> {{ x }}</p>
+                <p><strong>Y:</strong> {{ y }}</p>
+                <p><strong>Z:</strong> {{ z }}</p>
+                <p><strong>Yaw:</strong> {{ yaw }}</p>
+                <p><strong>Pitch:</strong> {{ pitch }}</p>
+                <p><strong>Roll:</strong> {{ roll }}</p>
+            </div>
+            {% endif %}
         </div>
-        {% endif %}
-    </div>
 
-    <div class="image-container">
-        <h2>Random Image:</h2>
-        <img src="{{ url_for('', filename=image_name) }}" alt="Random Image">
+        <!-- Image Section -->
+        <div class="image-container">
+            <img src="{{ url_for('static', filename='images/image.jpeg') }}" alt="Gaussian Splat">
+        </div>
     </div>
 </body>
 </html>
